@@ -1,5 +1,10 @@
 = Mechanize CHANGELOG
 
+=== HEAD
+
+* Bug Fixes:
+  * Fixed a bug with bad cookie parsing
+
 === 0.9.1 2009/02/23
 
 * New Features:
